--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vxe-table": "^3.6.6",
+    "xe-utils": "^3.5.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.11",
