--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.10",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vxe-table": "^3.6.6",
